Add unit tests and update borrow return logic (borrowId), controller fixes